examples/test/testpolicy5700.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5700
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key35: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value43
          key0: value47
      podSelector:
        matchLabels:
          key34: value1
          key32: value21
